# AWS_DeepRacer

./: README.md  bermuda_build.sh  build.sh  build_sample.sh  export.sh  install_para_sdk.sh  practice_build.sh  ps.sh  sample_build.sh
AA/: .project
AA/config/: autosario_config.arxml
AA/design/: autosario_design.arxml
AA/gen_ara/implementation/Machine/Sensor/src/sensor/deepracer/camera/: CMakeLists.txt  camera_driver.cpp
AA/gen_ara/implementation/Machine/Sensor/src/sensor/deepracer/camera/include/: camera_driver.h
AA/gen_ara/implementation/Machine/Sensor/src/sensor/deepracer/lidar/: CMakeLists.txt  lidar_driver.cpp
AA/gen_ara/implementation/Machine/Sensor/src/sensor/deepracer/lidar/include/: lidar_driver.h
AA_Code/Actuator/src/: CMakeLists.txt  main.cpp
AA_Code/Calc/src/: CMakeLists.txt  main.cpp
AA_Code/Sensor/src/: CMakeLists.txt  main.cpp
AUTOSAR/EC2024_NO_DLT/design/: autosario_design.arxml
AUTOSAR/EC2024_PRACTICE_VER1/: .project
AUTOSAR/EC2024_Sample/design/: autosario_design.arxml
AUTOSAR/bermuda/: .project
AUTOSAR/bermuda_base/: .project
Inference-workspace/: convert-tensor.py  example_data.txt  test-tf2c_ver2.cpp  test-tf2c_ver2_debug.cpp
Inference-workspace/bermuda3-model/: model_metadata.json  worker_0.multi_agent_graph.main_level.main_level.agent_0.csv  worker_0.multi_agent_graph_0.json
Inference-workspace/carfile-model/: worker_0.multi_agent_graph.main_level.main_level.agent_0.csv  worker_0.multi_agent_graph_0.json
Inference-workspace/inference_cpp_with_py/: main_program  run_model.py
Inference-workspace/load-model-with-py/: check-tensor-node.py  print-iotensor.py  test.cpp
deepracer_example_code/: Makefile  README.md  run_all.cpp
deepracer_example_code/lidar/: lidar_node_test.cpp
deepracercode/camera/: camera_node_test.cpp
deepracercode/servo/: build_servo.sh
model/: convert-tensor.py  model-loader-test.cpp
model/liam1-model/: reward-function.py  tensorcpp-noneSOMEIP.cpp  tensorcpp-withSOMEIP.cpp
model/model_save_11.10/: deepracer_checkpoints.json  model_metadata.json  reward_function.py
model/workspace/: hyperparameters.json  model_metadata.json  reward_function.py
work2/: simulation.launch
(+261 files in other folders)
